...
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_weight = "1"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_weight = "0"/>
...
