...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:clipToPadding="false"
        android:id="@+id/scroll"
        style="@style/background">

        <LinearLayout
            android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
